# terse

./: Cargo.toml  README.md
docs/: ARCHITECTURE.md  BENCHMARKS.md  TAMP-VS-TERSE.md
src/: classify.rs  compress.rs  extract.rs  json.rs  main.rs  proxy.rs  tabular.rs  text.rs
