[package]
name = "terse"
version = "0.1.0"
edition = "2021"
description = "lossless context compression for LLM tool results"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
sha2 = "0.10"
similar = "2"
comfy-table = "7"
csv = "1"

[profile.release]
opt-level = 3
